erDiagram
    direction TB

    %% Supplier Tables

    Supplier {
        int SupplierID PK
        string Name
        string Category
    }

    SupplierDelivery {
        int InvoiceID PK
        int SupplierID FK
        date ExpectedDelivery
        date ActualDelivery
    }

    SupplyItem {
        int SupplyItemID PK
        string ItemName
        string SupplierID FK
    }

    SupplyInventory {
        int SupplyInventoryID PK
        int SupplyItemID FK
        int Quantity
    }

    SupplierItemDelivery {
        int OrderItemID PK
        int InvoiceID FK
        int SupplyItemID FK
        int Quantity
    }


    %% Wine TABLES

    WineInventory {
        int WineInventoryID PK
        int WineID FK
        int Quantity
    }

    Wine {
        int WineID PK
        string Name
        string Type
        year YearProduced
    }


    %% DISTRIBUTOR TABLES

    Distributor {
        int DistID PK
        string Name
        string Phone
        string Address
        string Email
    }

    DistOrder {
        int OrderID PK
        int DistID FK
        int ShipmentID FK
        date OrderDate
    }

    DistItemOrder {
        int OrderItemID PK
        int OrderID FK
        int WineID FK
        int Quantity
    }

    ShipService {
        int ShipperID PK
        string Name
        string Phone
        string Web
    }

    Shipment {
        int ShipmentID PK
        date ShipmentDate
        string TrackingNumber
        int ShipperID FK
    }


    %% Employee Tables

    Department {
        int DeptID PK
        string Name
    }

    Employee {
        int EmployeeID PK
        string FirstName
        string LastName
        string Role
        int DeptID FK
    }

    Hours {
        int PunchID PK
        int EmployeeID FK
        datetime StartShift
        datetime EndShift
        decimal HoursWorked
    }


    %% RELATIONSHIPS
    
    Supplier ||--o{ SupplierDelivery : supplies
    SupplierDelivery ||--o{ SupplierItemDelivery : contains_items
    SupplyItem ||--o{ SupplierItemDelivery : delivered
    SupplyItem ||--o{ SupplyInventory : stocked_as

    Wine ||--o{ WineInventory : stocked_in
    Wine ||--o{ DistItemOrder : included_in

    Department ||--o{ Employee : includes
    Employee ||--o{ Hours : logs

    Distributor ||--o{ DistOrder : places
    DistOrder ||--o{ DistItemOrder : contains

    Shipment ||--o{ DistOrder : shipped_as
    ShipService ||--o{ Shipment : ships